# centor-of-mass

./: .gitignore  CMakeLists.txt  Makefile  README.md  body_sensor.c  com.c  com.h  dh_parameter.h  dh_test  exo_msgs.h  main  main.c  test_body_sensor.c  test_dh  test_dh_parameter.c
d2_CoM/: CoM.d2
include/: base_of_support.h  body_sensor.h  centor_of_mass.h  dh_parameter.h  exo_msgs.h  forward_kinematics.h
src/: base_of_support.c  body_sensor.c  centor_of_mass.c  dh_parameter.c  forward_kinematics.c  test_body_sensor.c  test_dh_parameter.c
test/: test_base_of_support.c  test_body_sensor.c  test_centor_of_mass.c  test_dh_parameter.c  test_forward_kinematics.c
